// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Story Snapshots: CustomStyle should match snapshot 1`] = `
<RCTScrollView
  style={
    {
      "backgroundColor": "#FFFFFF",
    }
  }
>
  <View>
    <View
      style={
        [
          {
            "marginHorizontal": 16,
          },
          {
            "backgroundColor": "#FFFFFF",
          },
          undefined,
          undefined,
        ]
      }
    >
      <ViewManagerAdapter_ExpoUI
        colorScheme="light"
        ignoreSafeArea="all"
        layoutDirection="leftToRight"
        style={
          [
            {
              "width": "100%",
            },
            {
              "height": 54,
            },
          ]
        }
      >
        <ViewManagerAdapter_ExpoUI
          modifiers={
            [
              {
                "$type": "padding",
                "horizontal": 16,
              },
            ]
          }
          onGlobalEvent={[Function]}
          spacing={12}
        >
          <ViewManagerAdapter_ExpoUI
            modifiers={
              [
                {
                  "$type": "buttonStyle",
                  "style": "plain",
                },
                {
                  "$type": "accessibilityLabel",
                  "label": "Styled Room ",
                },
              ]
            }
            onButtonPress={[Function]}
            onGlobalEvent={[Function]}
            testID="directory-item-style"
          >
            <ViewManagerAdapter_ExpoUI
              modifiers={
                [
                  {
                    "$type": "contentShape",
                    "kind": undefined,
                    "shape": "rectangle",
                  },
                ]
              }
              onGlobalEvent={[Function]}
              spacing={12}
            >
              <ViewManagerAdapter_ExpoUI
                expoInternalSizeFromChildren={true}
                layoutRoot={false}
                matchContents={true}
              >
                <View
                  accessibilityLabel="S's avatar"
                  accessible={false}
                  style={
                    [
                      {
                        "borderRadius": 4,
                        "height": 30,
                        "width": 30,
                      },
                      undefined,
                    ]
                  }
                  testID="avatar"
                >
                  <ViewManagerAdapter_ExpoImage
                    borderRadius={4}
                    containerViewRef={{"current":"Object"}}
                    contentFit="cover"
                    contentPosition={
                      {
                        "left": "50%",
                        "top": "50%",
                      }
                    }
                    height={30}
                    nativeViewRef={{"current":"NativeComponent"}}
                    onError={[Function]}
                    onLoad={[Function]}
                    onLoadStart={[Function]}
                    onProgress={[Function]}
                    placeholder={[]}
                    priority="high"
                    sfEffect={null}
                    source={
                      [
                        {
                          "headers": {
                            "User-Agent": "RC Mobile; ios unknown; vunknown (unknown)",
                          },
                          "uri": "https://open.rocket.chat/avatar/@S?format=png&size=60",
                        },
                      ]
                    }
                    style={
                      {
                        "borderRadius": 4,
                        "height": 30,
                        "width": 30,
                      }
                    }
                    symbolSize={null}
                    symbolWeight={null}
                    transition={null}
                    width={30}
                  />
                </View>
              </ViewManagerAdapter_ExpoUI>
              <ViewManagerAdapter_ExpoUI
                alignment="leading"
                spacing={2}
              >
                <ViewManagerAdapter_ExpoUI
                  spacing={4}
                >
                  <ViewManagerAdapter_ExpoUI
                    expoInternalSizeFromChildren={true}
                    layoutRoot={false}
                    matchContents={true}
                  >
                    <Text
                      allowFontScaling={false}
                      selectable={false}
                      style={
                        [
                          {
                            "color": "#1F2329",
                            "fontSize": 16,
                          },
                          [
                            {
                              "lineHeight": 16,
                            },
                            [
                              {
                                "marginRight": 4,
                              },
                              undefined,
                            ],
                          ],
                          {
                            "fontFamily": "custom",
                            "fontStyle": "normal",
                            "fontWeight": "normal",
                          },
                          {},
                        ]
                      }
                    >
                      
                    </Text>
                  </ViewManagerAdapter_ExpoUI>
                  <ViewManagerAdapter_ExpoUI
                    modifiers={
                      [
                        {
                          "$type": "lineLimit",
                          "limit": 1,
                          "reservesSpace": undefined,
                        },
                        {
                          "$type": "font",
                          "size": 16,
                          "weight": "medium",
                        },
                        {
                          "$type": "foregroundStyle",
                          "style": {
                            "color": "#2F343D",
                            "type": "color",
                          },
                        },
                      ]
                    }
                    onGlobalEvent={[Function]}
                    text="Styled Room"
                  />
                </ViewManagerAdapter_ExpoUI>
                <ViewManagerAdapter_ExpoUI
                  modifiers={
                    [
                      {
                        "$type": "lineLimit",
                        "limit": 1,
                        "reservesSpace": undefined,
                      },
                      {
                        "$type": "font",
                        "size": 14,
                      },
                      {
                        "$type": "foregroundStyle",
                        "style": {
                          "color": "#6C727A",
                          "type": "color",
                        },
                      },
                    ]
                  }
                  onGlobalEvent={[Function]}
                  text="Custom style applied"
                />
              </ViewManagerAdapter_ExpoUI>
              <ViewManagerAdapter_ExpoUI />
            </ViewManagerAdapter_ExpoUI>
          </ViewManagerAdapter_ExpoUI>
        </ViewManagerAdapter_ExpoUI>
      </ViewManagerAdapter_ExpoUI>
    </View>
  </View>
</RCTScrollView>
`;

exports[`Story Snapshots: Default should match snapshot 1`] = `
<RCTScrollView
  style={
    {
      "backgroundColor": "#FFFFFF",
    }
  }
>
  <View>
    <View
      style={
        [
          {
            "marginHorizontal": 16,
          },
          {
            "backgroundColor": "#FFFFFF",
          },
          undefined,
          undefined,
        ]
      }
    >
      <ViewManagerAdapter_ExpoUI
        colorScheme="light"
        ignoreSafeArea="all"
        layoutDirection="leftToRight"
        style={
          [
            {
              "width": "100%",
            },
            {
              "height": 54,
            },
          ]
        }
      >
        <ViewManagerAdapter_ExpoUI
          modifiers={
            [
              {
                "$type": "padding",
                "horizontal": 16,
              },
            ]
          }
          onGlobalEvent={[Function]}
          spacing={12}
        >
          <ViewManagerAdapter_ExpoUI
            modifiers={
              [
                {
                  "$type": "buttonStyle",
                  "style": "plain",
                },
                {
                  "$type": "accessibilityLabel",
                  "label": "General ",
                },
              ]
            }
            onButtonPress={[Function]}
            onGlobalEvent={[Function]}
            testID="directory-item"
          >
            <ViewManagerAdapter_ExpoUI
              modifiers={
                [
                  {
                    "$type": "contentShape",
                    "kind": undefined,
                    "shape": "rectangle",
                  },
                ]
              }
              onGlobalEvent={[Function]}
              spacing={12}
            >
              <ViewManagerAdapter_ExpoUI
                expoInternalSizeFromChildren={true}
                layoutRoot={false}
                matchContents={true}
              >
                <View
                  accessibilityLabel="G's avatar"
                  accessible={false}
                  style={
                    [
                      {
                        "borderRadius": 4,
                        "height": 30,
                        "width": 30,
                      },
                      undefined,
                    ]
                  }
                  testID="avatar"
                >
                  <ViewManagerAdapter_ExpoImage
                    borderRadius={4}
                    containerViewRef={{"current":"Object"}}
                    contentFit="cover"
                    contentPosition={
                      {
                        "left": "50%",
                        "top": "50%",
                      }
                    }
                    height={30}
                    nativeViewRef={{"current":"NativeComponent"}}
                    onError={[Function]}
                    onLoad={[Function]}
                    onLoadStart={[Function]}
                    onProgress={[Function]}
                    placeholder={[]}
                    priority="high"
                    sfEffect={null}
                    source={
                      [
                        {
                          "headers": {
                            "User-Agent": "RC Mobile; ios unknown; vunknown (unknown)",
                          },
                          "uri": "https://open.rocket.chat/avatar/@G?format=png&size=60",
                        },
                      ]
                    }
                    style={
                      {
                        "borderRadius": 4,
                        "height": 30,
                        "width": 30,
                      }
                    }
                    symbolSize={null}
                    symbolWeight={null}
                    transition={null}
                    width={30}
                  />
                </View>
              </ViewManagerAdapter_ExpoUI>
              <ViewManagerAdapter_ExpoUI
                alignment="leading"
                spacing={2}
              >
                <ViewManagerAdapter_ExpoUI
                  spacing={4}
                >
                  <ViewManagerAdapter_ExpoUI
                    expoInternalSizeFromChildren={true}
                    layoutRoot={false}
                    matchContents={true}
                  >
                    <Text
                      allowFontScaling={false}
                      selectable={false}
                      style={
                        [
                          {
                            "color": "#1F2329",
                            "fontSize": 16,
                          },
                          [
                            {
                              "lineHeight": 16,
                            },
                            [
                              {
                                "marginRight": 4,
                              },
                              undefined,
                            ],
                          ],
                          {
                            "fontFamily": "custom",
                            "fontStyle": "normal",
                            "fontWeight": "normal",
                          },
                          {},
                        ]
                      }
                    >
                      
                    </Text>
                  </ViewManagerAdapter_ExpoUI>
                  <ViewManagerAdapter_ExpoUI
                    modifiers={
                      [
                        {
                          "$type": "lineLimit",
                          "limit": 1,
                          "reservesSpace": undefined,
                        },
                        {
                          "$type": "font",
                          "size": 16,
                          "weight": "medium",
                        },
                        {
                          "$type": "foregroundStyle",
                          "style": {
                            "color": "#2F343D",
                            "type": "color",
                          },
                        },
                      ]
                    }
                    onGlobalEvent={[Function]}
                    text="General"
                  />
                </ViewManagerAdapter_ExpoUI>
                <ViewManagerAdapter_ExpoUI
                  modifiers={
                    [
                      {
                        "$type": "lineLimit",
                        "limit": 1,
                        "reservesSpace": undefined,
                      },
                      {
                        "$type": "font",
                        "size": 14,
                      },
                      {
                        "$type": "foregroundStyle",
                        "style": {
                          "color": "#6C727A",
                          "type": "color",
                        },
                      },
                    ]
                  }
                  onGlobalEvent={[Function]}
                  text="A public room"
                />
              </ViewManagerAdapter_ExpoUI>
              <ViewManagerAdapter_ExpoUI />
            </ViewManagerAdapter_ExpoUI>
          </ViewManagerAdapter_ExpoUI>
        </ViewManagerAdapter_ExpoUI>
      </ViewManagerAdapter_ExpoUI>
    </View>
  </View>
</RCTScrollView>
`;

exports[`Story Snapshots: DirectMessage should match snapshot 1`] = `
<RCTScrollView
  style={
    {
      "backgroundColor": "#FFFFFF",
    }
  }
>
  <View>
    <View
      style={
        [
          {
            "marginHorizontal": 16,
          },
          {
            "backgroundColor": "#FFFFFF",
          },
          undefined,
          undefined,
        ]
      }
    >
      <ViewManagerAdapter_ExpoUI
        colorScheme="light"
        ignoreSafeArea="all"
        layoutDirection="leftToRight"
        style={
          [
            {
              "width": "100%",
            },
            {
              "height": 54,
            },
          ]
        }
      >
        <ViewManagerAdapter_ExpoUI
          modifiers={
            [
              {
                "$type": "padding",
                "horizontal": 16,
              },
            ]
          }
          onGlobalEvent={[Function]}
          spacing={12}
        >
          <ViewManagerAdapter_ExpoUI
            modifiers={
              [
                {
                  "$type": "buttonStyle",
                  "style": "plain",
                },
                {
                  "$type": "accessibilityLabel",
                  "label": "Alice Johnson ",
                },
              ]
            }
            onButtonPress={[Function]}
            onGlobalEvent={[Function]}
            testID="directory-item-dm"
          >
            <ViewManagerAdapter_ExpoUI
              modifiers={
                [
                  {
                    "$type": "contentShape",
                    "kind": undefined,
                    "shape": "rectangle",
                  },
                ]
              }
              onGlobalEvent={[Function]}
              spacing={12}
            >
              <ViewManagerAdapter_ExpoUI
                expoInternalSizeFromChildren={true}
                layoutRoot={false}
                matchContents={true}
              >
                <View
                  accessibilityLabel="A's avatar"
                  accessible={false}
                  style={
                    [
                      {
                        "borderRadius": 4,
                        "height": 30,
                        "width": 30,
                      },
                      undefined,
                    ]
                  }
                  testID="avatar"
                >
                  <ViewManagerAdapter_ExpoImage
                    borderRadius={4}
                    containerViewRef={{"current":"Object"}}
                    contentFit="cover"
                    contentPosition={
                      {
                        "left": "50%",
                        "top": "50%",
                      }
                    }
                    height={30}
                    nativeViewRef={{"current":"NativeComponent"}}
                    onError={[Function]}
                    onLoad={[Function]}
                    onLoadStart={[Function]}
                    onProgress={[Function]}
                    placeholder={[]}
                    priority="high"
                    sfEffect={null}
                    source={
                      [
                        {
                          "headers": {
                            "User-Agent": "RC Mobile; ios unknown; vunknown (unknown)",
                          },
                          "uri": "https://open.rocket.chat/avatar/A?format=png&size=60",
                        },
                      ]
                    }
                    style={
                      {
                        "borderRadius": 4,
                        "height": 30,
                        "width": 30,
                      }
                    }
                    symbolSize={null}
                    symbolWeight={null}
                    transition={null}
                    width={30}
                  />
                </View>
              </ViewManagerAdapter_ExpoUI>
              <ViewManagerAdapter_ExpoUI
                alignment="leading"
                spacing={2}
              >
                <ViewManagerAdapter_ExpoUI
                  modifiers={
                    [
                      {
                        "$type": "lineLimit",
                        "limit": 1,
                        "reservesSpace": undefined,
                      },
                      {
                        "$type": "font",
                        "size": 16,
                        "weight": "medium",
                      },
                      {
                        "$type": "foregroundStyle",
                        "style": {
                          "color": "#2F343D",
                          "type": "color",
                        },
                      },
                    ]
                  }
                  onGlobalEvent={[Function]}
                  text="Alice Johnson"
                />
                <ViewManagerAdapter_ExpoUI
                  modifiers={
                    [
                      {
                        "$type": "lineLimit",
                        "limit": 1,
                        "reservesSpace": undefined,
                      },
                      {
                        "$type": "font",
                        "size": 14,
                      },
                      {
                        "$type": "foregroundStyle",
                        "style": {
                          "color": "#6C727A",
                          "type": "color",
                        },
                      },
                    ]
                  }
                  onGlobalEvent={[Function]}
                  text="Hey there!"
                />
              </ViewManagerAdapter_ExpoUI>
              <ViewManagerAdapter_ExpoUI />
            </ViewManagerAdapter_ExpoUI>
          </ViewManagerAdapter_ExpoUI>
        </ViewManagerAdapter_ExpoUI>
      </ViewManagerAdapter_ExpoUI>
    </View>
  </View>
</RCTScrollView>
`;

exports[`Story Snapshots: LongRoomName should match snapshot 1`] = `
<RCTScrollView
  style={
    {
      "backgroundColor": "#FFFFFF",
    }
  }
>
  <View>
    <View
      style={
        [
          {
            "marginHorizontal": 16,
          },
          {
            "backgroundColor": "#FFFFFF",
          },
          undefined,
          undefined,
        ]
      }
    >
      <ViewManagerAdapter_ExpoUI
        colorScheme="light"
        ignoreSafeArea="all"
        layoutDirection="leftToRight"
        style={
          [
            {
              "width": "100%",
            },
            {
              "height": 54,
            },
          ]
        }
      >
        <ViewManagerAdapter_ExpoUI
          modifiers={
            [
              {
                "$type": "padding",
                "horizontal": 16,
              },
            ]
          }
          onGlobalEvent={[Function]}
          spacing={12}
        >
          <ViewManagerAdapter_ExpoUI
            modifiers={
              [
                {
                  "$type": "buttonStyle",
                  "style": "plain",
                },
                {
                  "$type": "accessibilityLabel",
                  "label": "This is a very very very very very very very long room name that should be truncated 9999 members",
                },
              ]
            }
            onButtonPress={[Function]}
            onGlobalEvent={[Function]}
            testID="directory-item-long"
          >
            <ViewManagerAdapter_ExpoUI
              modifiers={
                [
                  {
                    "$type": "contentShape",
                    "kind": undefined,
                    "shape": "rectangle",
                  },
                ]
              }
              onGlobalEvent={[Function]}
              spacing={12}
            >
              <ViewManagerAdapter_ExpoUI
                expoInternalSizeFromChildren={true}
                layoutRoot={false}
                matchContents={true}
              >
                <View
                  accessibilityLabel="L's avatar"
                  accessible={false}
                  style={
                    [
                      {
                        "borderRadius": 4,
                        "height": 30,
                        "width": 30,
                      },
                      undefined,
                    ]
                  }
                  testID="avatar"
                >
                  <ViewManagerAdapter_ExpoImage
                    borderRadius={4}
                    containerViewRef={{"current":"Object"}}
                    contentFit="cover"
                    contentPosition={
                      {
                        "left": "50%",
                        "top": "50%",
                      }
                    }
                    height={30}
                    nativeViewRef={{"current":"NativeComponent"}}
                    onError={[Function]}
                    onLoad={[Function]}
                    onLoadStart={[Function]}
                    onProgress={[Function]}
                    placeholder={[]}
                    priority="high"
                    sfEffect={null}
                    source={
                      [
                        {
                          "headers": {
                            "User-Agent": "RC Mobile; ios unknown; vunknown (unknown)",
                          },
                          "uri": "https://open.rocket.chat/avatar/@L?format=png&size=60",
                        },
                      ]
                    }
                    style={
                      {
                        "borderRadius": 4,
                        "height": 30,
                        "width": 30,
                      }
                    }
                    symbolSize={null}
                    symbolWeight={null}
                    transition={null}
                    width={30}
                  />
                </View>
              </ViewManagerAdapter_ExpoUI>
              <ViewManagerAdapter_ExpoUI
                alignment="leading"
                spacing={2}
              >
                <ViewManagerAdapter_ExpoUI
                  spacing={4}
                >
                  <ViewManagerAdapter_ExpoUI
                    expoInternalSizeFromChildren={true}
                    layoutRoot={false}
                    matchContents={true}
                  >
                    <Text
                      allowFontScaling={false}
                      selectable={false}
                      style={
                        [
                          {
                            "color": "#1F2329",
                            "fontSize": 16,
                          },
                          [
                            {
                              "lineHeight": 16,
                            },
                            [
                              {
                                "marginRight": 4,
                              },
                              undefined,
                            ],
                          ],
                          {
                            "fontFamily": "custom",
                            "fontStyle": "normal",
                            "fontWeight": "normal",
                          },
                          {},
                        ]
                      }
                    >
                      
                    </Text>
                  </ViewManagerAdapter_ExpoUI>
                  <ViewManagerAdapter_ExpoUI
                    modifiers={
                      [
                        {
                          "$type": "lineLimit",
                          "limit": 1,
                          "reservesSpace": undefined,
                        },
                        {
                          "$type": "font",
                          "size": 16,
                          "weight": "medium",
                        },
                        {
                          "$type": "foregroundStyle",
                          "style": {
                            "color": "#2F343D",
                            "type": "color",
                          },
                        },
                      ]
                    }
                    onGlobalEvent={[Function]}
                    text="This is a very very very very very very very long room name that should be truncated"
                  />
                </ViewManagerAdapter_ExpoUI>
                <ViewManagerAdapter_ExpoUI
                  modifiers={
                    [
                      {
                        "$type": "lineLimit",
                        "limit": 1,
                        "reservesSpace": undefined,
                      },
                      {
                        "$type": "font",
                        "size": 14,
                      },
                      {
                        "$type": "foregroundStyle",
                        "style": {
                          "color": "#6C727A",
                          "type": "color",
                        },
                      },
                    ]
                  }
                  onGlobalEvent={[Function]}
                  text="Long name test"
                />
              </ViewManagerAdapter_ExpoUI>
              <ViewManagerAdapter_ExpoUI />
              <ViewManagerAdapter_ExpoUI
                expoInternalSizeFromChildren={true}
                layoutRoot={false}
                matchContents={true}
              >
                <Text
                  style={
                    [
                      {
                        "backgroundColor": "transparent",
                        "fontFamily": "Inter",
                        "fontSize": 14,
                        "fontVariant": [
                          "tabular-nums",
                        ],
                        "fontWeight": "400",
                        "paddingLeft": 10,
                        "textAlign": "left",
                      },
                      {
                        "color": "#6C727A",
                      },
                    ]
                  }
                >
                  9999 members
                </Text>
              </ViewManagerAdapter_ExpoUI>
            </ViewManagerAdapter_ExpoUI>
          </ViewManagerAdapter_ExpoUI>
        </ViewManagerAdapter_ExpoUI>
      </ViewManagerAdapter_ExpoUI>
    </View>
  </View>
</RCTScrollView>
`;

exports[`Story Snapshots: OnlyTitle should match snapshot 1`] = `
<RCTScrollView
  style={
    {
      "backgroundColor": "#FFFFFF",
    }
  }
>
  <View>
    <View
      style={
        [
          {
            "marginHorizontal": 16,
          },
          {
            "backgroundColor": "#FFFFFF",
          },
          undefined,
          undefined,
        ]
      }
    >
      <ViewManagerAdapter_ExpoUI
        colorScheme="light"
        ignoreSafeArea="all"
        layoutDirection="leftToRight"
        style={
          [
            {
              "width": "100%",
            },
            {
              "height": 54,
            },
          ]
        }
      >
        <ViewManagerAdapter_ExpoUI
          modifiers={
            [
              {
                "$type": "padding",
                "horizontal": 16,
              },
            ]
          }
          onGlobalEvent={[Function]}
          spacing={12}
        >
          <ViewManagerAdapter_ExpoUI
            modifiers={
              [
                {
                  "$type": "buttonStyle",
                  "style": "plain",
                },
                {
                  "$type": "accessibilityLabel",
                  "label": "Just a title ",
                },
              ]
            }
            onButtonPress={[Function]}
            onGlobalEvent={[Function]}
            testID="directory-item-title"
          >
            <ViewManagerAdapter_ExpoUI
              modifiers={
                [
                  {
                    "$type": "contentShape",
                    "kind": undefined,
                    "shape": "rectangle",
                  },
                ]
              }
              onGlobalEvent={[Function]}
              spacing={12}
            >
              <ViewManagerAdapter_ExpoUI
                expoInternalSizeFromChildren={true}
                layoutRoot={false}
                matchContents={true}
              />
              <ViewManagerAdapter_ExpoUI
                alignment="leading"
                spacing={2}
              >
                <ViewManagerAdapter_ExpoUI
                  spacing={4}
                >
                  <ViewManagerAdapter_ExpoUI
                    expoInternalSizeFromChildren={true}
                    layoutRoot={false}
                    matchContents={true}
                  >
                    <Text
                      allowFontScaling={false}
                      selectable={false}
                      style={
                        [
                          {
                            "color": "#1F2329",
                            "fontSize": 16,
                          },
                          [
                            {
                              "lineHeight": 16,
                            },
                            [
                              {
                                "marginRight": 4,
                              },
                              undefined,
                            ],
                          ],
                          {
                            "fontFamily": "custom",
                            "fontStyle": "normal",
                            "fontWeight": "normal",
                          },
                          {},
                        ]
                      }
                    >
                      
                    </Text>
                  </ViewManagerAdapter_ExpoUI>
                  <ViewManagerAdapter_ExpoUI
                    modifiers={
                      [
                        {
                          "$type": "lineLimit",
                          "limit": 1,
                          "reservesSpace": undefined,
                        },
                        {
                          "$type": "font",
                          "size": 16,
                          "weight": "medium",
                        },
                        {
                          "$type": "foregroundStyle",
                          "style": {
                            "color": "#2F343D",
                            "type": "color",
                          },
                        },
                      ]
                    }
                    onGlobalEvent={[Function]}
                    text="Just a title"
                  />
                </ViewManagerAdapter_ExpoUI>
              </ViewManagerAdapter_ExpoUI>
              <ViewManagerAdapter_ExpoUI />
            </ViewManagerAdapter_ExpoUI>
          </ViewManagerAdapter_ExpoUI>
        </ViewManagerAdapter_ExpoUI>
      </ViewManagerAdapter_ExpoUI>
    </View>
  </View>
</RCTScrollView>
`;

exports[`Story Snapshots: TeamMain should match snapshot 1`] = `
<RCTScrollView
  style={
    {
      "backgroundColor": "#FFFFFF",
    }
  }
>
  <View>
    <View
      style={
        [
          {
            "marginHorizontal": 16,
          },
          {
            "backgroundColor": "#FFFFFF",
          },
          undefined,
          undefined,
        ]
      }
    >
      <ViewManagerAdapter_ExpoUI
        colorScheme="light"
        ignoreSafeArea="all"
        layoutDirection="leftToRight"
        style={
          [
            {
              "width": "100%",
            },
            {
              "height": 54,
            },
          ]
        }
      >
        <ViewManagerAdapter_ExpoUI
          modifiers={
            [
              {
                "$type": "padding",
                "horizontal": 16,
              },
            ]
          }
          onGlobalEvent={[Function]}
          spacing={12}
        >
          <ViewManagerAdapter_ExpoUI
            modifiers={
              [
                {
                  "$type": "buttonStyle",
                  "style": "plain",
                },
                {
                  "$type": "accessibilityLabel",
                  "label": "Engineering Team ",
                },
              ]
            }
            onButtonPress={[Function]}
            onGlobalEvent={[Function]}
            testID="directory-item-team"
          >
            <ViewManagerAdapter_ExpoUI
              modifiers={
                [
                  {
                    "$type": "contentShape",
                    "kind": undefined,
                    "shape": "rectangle",
                  },
                ]
              }
              onGlobalEvent={[Function]}
              spacing={12}
            >
              <ViewManagerAdapter_ExpoUI
                expoInternalSizeFromChildren={true}
                layoutRoot={false}
                matchContents={true}
              >
                <View
                  accessibilityLabel="E's avatar"
                  accessible={false}
                  style={
                    [
                      {
                        "borderRadius": 4,
                        "height": 30,
                        "width": 30,
                      },
                      undefined,
                    ]
                  }
                  testID="avatar"
                >
                  <ViewManagerAdapter_ExpoImage
                    borderRadius={4}
                    containerViewRef={{"current":"Object"}}
                    contentFit="cover"
                    contentPosition={
                      {
                        "left": "50%",
                        "top": "50%",
                      }
                    }
                    height={30}
                    nativeViewRef={{"current":"NativeComponent"}}
                    onError={[Function]}
                    onLoad={[Function]}
                    onLoadStart={[Function]}
                    onProgress={[Function]}
                    placeholder={[]}
                    priority="high"
                    sfEffect={null}
                    source={
                      [
                        {
                          "headers": {
                            "User-Agent": "RC Mobile; ios unknown; vunknown (unknown)",
                          },
                          "uri": "https://open.rocket.chat/avatar/@E?format=png&size=60",
                        },
                      ]
                    }
                    style={
                      {
                        "borderRadius": 4,
                        "height": 30,
                        "width": 30,
                      }
                    }
                    symbolSize={null}
                    symbolWeight={null}
                    transition={null}
                    width={30}
                  />
                </View>
              </ViewManagerAdapter_ExpoUI>
              <ViewManagerAdapter_ExpoUI
                alignment="leading"
                spacing={2}
              >
                <ViewManagerAdapter_ExpoUI
                  spacing={4}
                >
                  <ViewManagerAdapter_ExpoUI
                    expoInternalSizeFromChildren={true}
                    layoutRoot={false}
                    matchContents={true}
                  >
                    <Text
                      allowFontScaling={false}
                      selectable={false}
                      style={
                        [
                          {
                            "color": "#1F2329",
                            "fontSize": 16,
                          },
                          [
                            {
                              "lineHeight": 16,
                            },
                            [
                              {
                                "marginRight": 4,
                              },
                              undefined,
                            ],
                          ],
                          {
                            "fontFamily": "custom",
                            "fontStyle": "normal",
                            "fontWeight": "normal",
                          },
                          {},
                        ]
                      }
                    >
                      
                    </Text>
                  </ViewManagerAdapter_ExpoUI>
                  <ViewManagerAdapter_ExpoUI
                    modifiers={
                      [
                        {
                          "$type": "lineLimit",
                          "limit": 1,
                          "reservesSpace": undefined,
                        },
                        {
                          "$type": "font",
                          "size": 16,
                          "weight": "medium",
                        },
                        {
                          "$type": "foregroundStyle",
                          "style": {
                            "color": "#2F343D",
                            "type": "color",
                          },
                        },
                      ]
                    }
                    onGlobalEvent={[Function]}
                    text="Engineering Team"
                  />
                </ViewManagerAdapter_ExpoUI>
                <ViewManagerAdapter_ExpoUI
                  modifiers={
                    [
                      {
                        "$type": "lineLimit",
                        "limit": 1,
                        "reservesSpace": undefined,
                      },
                      {
                        "$type": "font",
                        "size": 14,
                      },
                      {
                        "$type": "foregroundStyle",
                        "style": {
                          "color": "#6C727A",
                          "type": "color",
                        },
                      },
                    ]
                  }
                  onGlobalEvent={[Function]}
                  text="Main team room"
                />
              </ViewManagerAdapter_ExpoUI>
              <ViewManagerAdapter_ExpoUI />
            </ViewManagerAdapter_ExpoUI>
          </ViewManagerAdapter_ExpoUI>
        </ViewManagerAdapter_ExpoUI>
      </ViewManagerAdapter_ExpoUI>
    </View>
  </View>
</RCTScrollView>
`;

exports[`Story Snapshots: WithRightLabel should match snapshot 1`] = `
<RCTScrollView
  style={
    {
      "backgroundColor": "#FFFFFF",
    }
  }
>
  <View>
    <View
      style={
        [
          {
            "marginHorizontal": 16,
          },
          {
            "backgroundColor": "#FFFFFF",
          },
          undefined,
          undefined,
        ]
      }
    >
      <ViewManagerAdapter_ExpoUI
        colorScheme="light"
        ignoreSafeArea="all"
        layoutDirection="leftToRight"
        style={
          [
            {
              "width": "100%",
            },
            {
              "height": 54,
            },
          ]
        }
      >
        <ViewManagerAdapter_ExpoUI
          modifiers={
            [
              {
                "$type": "padding",
                "horizontal": 16,
              },
            ]
          }
          onGlobalEvent={[Function]}
          spacing={12}
        >
          <ViewManagerAdapter_ExpoUI
            modifiers={
              [
                {
                  "$type": "buttonStyle",
                  "style": "plain",
                },
                {
                  "$type": "accessibilityLabel",
                  "label": "General 123 members",
                },
              ]
            }
            onButtonPress={[Function]}
            onGlobalEvent={[Function]}
            testID="directory-item-label"
          >
            <ViewManagerAdapter_ExpoUI
              modifiers={
                [
                  {
                    "$type": "contentShape",
                    "kind": undefined,
                    "shape": "rectangle",
                  },
                ]
              }
              onGlobalEvent={[Function]}
              spacing={12}
            >
              <ViewManagerAdapter_ExpoUI
                expoInternalSizeFromChildren={true}
                layoutRoot={false}
                matchContents={true}
              >
                <View
                  accessibilityLabel="G's avatar"
                  accessible={false}
                  style={
                    [
                      {
                        "borderRadius": 4,
                        "height": 30,
                        "width": 30,
                      },
                      undefined,
                    ]
                  }
                  testID="avatar"
                >
                  <ViewManagerAdapter_ExpoImage
                    borderRadius={4}
                    containerViewRef={{"current":"Object"}}
                    contentFit="cover"
                    contentPosition={
                      {
                        "left": "50%",
                        "top": "50%",
                      }
                    }
                    height={30}
                    nativeViewRef={{"current":"NativeComponent"}}
                    onError={[Function]}
                    onLoad={[Function]}
                    onLoadStart={[Function]}
                    onProgress={[Function]}
                    placeholder={[]}
                    priority="high"
                    sfEffect={null}
                    source={
                      [
                        {
                          "headers": {
                            "User-Agent": "RC Mobile; ios unknown; vunknown (unknown)",
                          },
                          "uri": "https://open.rocket.chat/avatar/@G?format=png&size=60",
                        },
                      ]
                    }
                    style={
                      {
                        "borderRadius": 4,
                        "height": 30,
                        "width": 30,
                      }
                    }
                    symbolSize={null}
                    symbolWeight={null}
                    transition={null}
                    width={30}
                  />
                </View>
              </ViewManagerAdapter_ExpoUI>
              <ViewManagerAdapter_ExpoUI
                alignment="leading"
                spacing={2}
              >
                <ViewManagerAdapter_ExpoUI
                  spacing={4}
                >
                  <ViewManagerAdapter_ExpoUI
                    expoInternalSizeFromChildren={true}
                    layoutRoot={false}
                    matchContents={true}
                  >
                    <Text
                      allowFontScaling={false}
                      selectable={false}
                      style={
                        [
                          {
                            "color": "#1F2329",
                            "fontSize": 16,
                          },
                          [
                            {
                              "lineHeight": 16,
                            },
                            [
                              {
                                "marginRight": 4,
                              },
                              undefined,
                            ],
                          ],
                          {
                            "fontFamily": "custom",
                            "fontStyle": "normal",
                            "fontWeight": "normal",
                          },
                          {},
                        ]
                      }
                    >
                      
                    </Text>
                  </ViewManagerAdapter_ExpoUI>
                  <ViewManagerAdapter_ExpoUI
                    modifiers={
                      [
                        {
                          "$type": "lineLimit",
                          "limit": 1,
                          "reservesSpace": undefined,
                        },
                        {
                          "$type": "font",
                          "size": 16,
                          "weight": "medium",
                        },
                        {
                          "$type": "foregroundStyle",
                          "style": {
                            "color": "#2F343D",
                            "type": "color",
                          },
                        },
                      ]
                    }
                    onGlobalEvent={[Function]}
                    text="General"
                  />
                </ViewManagerAdapter_ExpoUI>
                <ViewManagerAdapter_ExpoUI
                  modifiers={
                    [
                      {
                        "$type": "lineLimit",
                        "limit": 1,
                        "reservesSpace": undefined,
                      },
                      {
                        "$type": "font",
                        "size": 14,
                      },
                      {
                        "$type": "foregroundStyle",
                        "style": {
                          "color": "#6C727A",
                          "type": "color",
                        },
                      },
                    ]
                  }
                  onGlobalEvent={[Function]}
                  text="Room with label"
                />
              </ViewManagerAdapter_ExpoUI>
              <ViewManagerAdapter_ExpoUI />
              <ViewManagerAdapter_ExpoUI
                expoInternalSizeFromChildren={true}
                layoutRoot={false}
                matchContents={true}
              >
                <Text
                  style={
                    [
                      {
                        "backgroundColor": "transparent",
                        "fontFamily": "Inter",
                        "fontSize": 14,
                        "fontVariant": [
                          "tabular-nums",
                        ],
                        "fontWeight": "400",
                        "paddingLeft": 10,
                        "textAlign": "left",
                      },
                      {
                        "color": "#6C727A",
                      },
                    ]
                  }
                >
                  123 members
                </Text>
              </ViewManagerAdapter_ExpoUI>
            </ViewManagerAdapter_ExpoUI>
          </ViewManagerAdapter_ExpoUI>
        </ViewManagerAdapter_ExpoUI>
      </ViewManagerAdapter_ExpoUI>
    </View>
  </View>
</RCTScrollView>
`;

exports[`Story Snapshots: WithoutDescription should match snapshot 1`] = `
<RCTScrollView
  style={
    {
      "backgroundColor": "#FFFFFF",
    }
  }
>
  <View>
    <View
      style={
        [
          {
            "marginHorizontal": 16,
          },
          {
            "backgroundColor": "#FFFFFF",
          },
          undefined,
          undefined,
        ]
      }
    >
      <ViewManagerAdapter_ExpoUI
        colorScheme="light"
        ignoreSafeArea="all"
        layoutDirection="leftToRight"
        style={
          [
            {
              "width": "100%",
            },
            {
              "height": 54,
            },
          ]
        }
      >
        <ViewManagerAdapter_ExpoUI
          modifiers={
            [
              {
                "$type": "padding",
                "horizontal": 16,
              },
            ]
          }
          onGlobalEvent={[Function]}
          spacing={12}
        >
          <ViewManagerAdapter_ExpoUI
            modifiers={
              [
                {
                  "$type": "buttonStyle",
                  "style": "plain",
                },
                {
                  "$type": "accessibilityLabel",
                  "label": "No description room ",
                },
              ]
            }
            onButtonPress={[Function]}
            onGlobalEvent={[Function]}
            testID="directory-item-no-desc"
          >
            <ViewManagerAdapter_ExpoUI
              modifiers={
                [
                  {
                    "$type": "contentShape",
                    "kind": undefined,
                    "shape": "rectangle",
                  },
                ]
              }
              onGlobalEvent={[Function]}
              spacing={12}
            >
              <ViewManagerAdapter_ExpoUI
                expoInternalSizeFromChildren={true}
                layoutRoot={false}
                matchContents={true}
              >
                <View
                  accessibilityLabel="N's avatar"
                  accessible={false}
                  style={
                    [
                      {
                        "borderRadius": 4,
                        "height": 30,
                        "width": 30,
                      },
                      undefined,
                    ]
                  }
                  testID="avatar"
                >
                  <ViewManagerAdapter_ExpoImage
                    borderRadius={4}
                    containerViewRef={{"current":"Object"}}
                    contentFit="cover"
                    contentPosition={
                      {
                        "left": "50%",
                        "top": "50%",
                      }
                    }
                    height={30}
                    nativeViewRef={{"current":"NativeComponent"}}
                    onError={[Function]}
                    onLoad={[Function]}
                    onLoadStart={[Function]}
                    onProgress={[Function]}
                    placeholder={[]}
                    priority="high"
                    sfEffect={null}
                    source={
                      [
                        {
                          "headers": {
                            "User-Agent": "RC Mobile; ios unknown; vunknown (unknown)",
                          },
                          "uri": "https://open.rocket.chat/avatar/@N?format=png&size=60",
                        },
                      ]
                    }
                    style={
                      {
                        "borderRadius": 4,
                        "height": 30,
                        "width": 30,
                      }
                    }
                    symbolSize={null}
                    symbolWeight={null}
                    transition={null}
                    width={30}
                  />
                </View>
              </ViewManagerAdapter_ExpoUI>
              <ViewManagerAdapter_ExpoUI
                alignment="leading"
                spacing={2}
              >
                <ViewManagerAdapter_ExpoUI
                  spacing={4}
                >
                  <ViewManagerAdapter_ExpoUI
                    expoInternalSizeFromChildren={true}
                    layoutRoot={false}
                    matchContents={true}
                  >
                    <Text
                      allowFontScaling={false}
                      selectable={false}
                      style={
                        [
                          {
                            "color": "#1F2329",
                            "fontSize": 16,
                          },
                          [
                            {
                              "lineHeight": 16,
                            },
                            [
                              {
                                "marginRight": 4,
                              },
                              undefined,
                            ],
                          ],
                          {
                            "fontFamily": "custom",
                            "fontStyle": "normal",
                            "fontWeight": "normal",
                          },
                          {},
                        ]
                      }
                    >
                      
                    </Text>
                  </ViewManagerAdapter_ExpoUI>
                  <ViewManagerAdapter_ExpoUI
                    modifiers={
                      [
                        {
                          "$type": "lineLimit",
                          "limit": 1,
                          "reservesSpace": undefined,
                        },
                        {
                          "$type": "font",
                          "size": 16,
                          "weight": "medium",
                        },
                        {
                          "$type": "foregroundStyle",
                          "style": {
                            "color": "#2F343D",
                            "type": "color",
                          },
                        },
                      ]
                    }
                    onGlobalEvent={[Function]}
                    text="No description room"
                  />
                </ViewManagerAdapter_ExpoUI>
              </ViewManagerAdapter_ExpoUI>
              <ViewManagerAdapter_ExpoUI />
            </ViewManagerAdapter_ExpoUI>
          </ViewManagerAdapter_ExpoUI>
        </ViewManagerAdapter_ExpoUI>
      </ViewManagerAdapter_ExpoUI>
    </View>
  </View>
</RCTScrollView>
`;
